# infralink

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
apis/pricing/: .gitignore  Cargo.toml  Dockerfile  api.yml
apis/pricing/src/: db.rs  main.rs  pricing.rs  routes.rs  schema.rs  validator.rs
apis/pricing/src/constants/: instance_types.rs  mod.rs  regions.rs
apis/pricing/src/models/: block_storage_request.rs  block_storage_response.rs  external_data_transfer_request.rs  external_data_transfer_response.rs  inter_region_data_transfer_request.rs  inter_region_data_transfer_response.rs  mod.rs  on_demand_request.rs  on_demand_response.rs  spot_request.rs  spot_response.rs  storage_request.rs  storage_response.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/api/: mod.rs
cli/src/api/aws/: api.rs
cli/src/api/pricing/: api.rs  graphql.rs  mod.rs
cli/src/api/pricing/models/: block_storage_query.rs  block_storage_response.rs  external_transfer_response.rs  inter_region_transfer_query.rs  on_demand_query.rs  on_demand_response.rs  pricing_response.rs  spot_response.rs
cli/src/commands/: build.rs  deploy.rs  help.rs  init.rs  mod.rs
cli/src/constants/: commands.rs  mod.rs  render_config.rs
cli/src/core/: config.rs  docker.rs  error.rs  executor.rs  math.rs  mod.rs  parser.rs  prompt.rs  table.rs  validator.rs
cli/src/models/: instance.rs  mod.rs  network.rs  region.rs
constants/: Cargo.toml
constants/src/: commands.rs  help.rs  lib.rs  regions.rs  render_config.rs
docs/: mint.json  quickstart.mdx  what-is-infralink.mdx
infrastructure/: README.md
infrastructure/ansible/: .gitignore  install.yaml  start_master.yaml
infrastructure/provisioner/: .gitignore  LICENSE  Pulumi.yaml  go.mod  go.sum  main.go  master.sh  start_master.yaml  start_worker.yaml
infrastructure/provisioner/assets/playbooks/: master.yaml  worker.yaml
infrastructure/terraform/: ec2.tf  general.tf  outputs.tf
math/: Cargo.toml
math/src/: lib.rs
pricing-sdk/: Cargo.toml
pricing-sdk/src/: graphql.rs  lib.rs
pricing-sdk/src/models/: external_transfer_query.rs  inter_region_transfer_response.rs  mod.rs  on_demand_query.rs  spot_query.rs
provisioner/: .gitignore  README.md  ansible.go  config.toml  go.mod  go.sum  image.go  infrastructure.go  main.go  pulumi.go
provisioner/assets/playbooks/: config.yaml  install.yaml  master.yaml  update.sh  values_ccm.yaml  worker.yaml
provisioner/packer/: aws-ubuntu.pkr.hcl
services/cost-bot/: Cargo.toml
services/cost-bot/src/: api.rs  cost.rs  db.rs  git.rs  github.rs  main.rs  webhook.rs
services/cost-bot/src/models/: events.rs  graphql.rs  mod.rs  pull_request.rs  push.rs  search.rs
services/price-updater/: Cargo.toml  Dockerfile
services/price-updater/src/: db.rs  helper.rs  main.rs  pricing.rs
services/price-updater/src/api/aws/: instance.rs  mod.rs  network.rs
services/price-updater/src/constants/: instances.rs  mod.rs  regions.rs
services/price-updater/src/db/: insert.rs  mod.rs
services/price-updater/src/models/: mod.rs  network.rs  on_demand_pricing.rs  spot_pricing.rs  storage.rs
services/price-updater/src/types/: force_f32.rs  force_u32.rs  mod.rs
services/spot-archive/: Dockerfile  build.sh  go.mod  go.sum  main.go
types/: Cargo.toml
types/src/: architecture.rs  cloud_provider.rs  config.rs  deployment_configuration.rs  lib.rs  region.rs  storage.rs
