[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pricing-sdk = { path = "../pricing-sdk" }
types = { path = "../types" }
constants = { path = "../constants" }
indexmap = "2.0.1"
