[package]
name = "pricing-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
miette = "5.10.0"
serde_json = "1.0.107"
