[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
keyring = "2.0.5"
toml = "0.8.1"
dirs = "5.0.1"
