[package]
name = "pricing-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.0"
aws-sdk-ec2 = { version = "0.30.0", features = ["rustls"] }
serde = { version = "1.0.185", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.105"
reqwest = { version = "0.11.6", features = ["json", "stream"] }
regex = "1.9.3"
indicatif = "0.17.6"
futures-util = "0.3.28"
chrono = "0.4.26"
tokio = { version = "1.32.0", features = ["time", "rt-multi-thread", "macros"] }
sqlx = { version = "0.7.1", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
anyhow = "1.0.75"
colored = "2.0.4"
