[package]
name = "pricing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
r2d2 = "0.8.9"
sqlx = { version = "0.7.1", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
env_logger = "0.10.0"
actix-governor = "0.4.1"
juniper = "0.15.11"
juniper_actix = "0.4.0"
