[package]
name = "cost-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pricing-sdk = { path = "../../pricing-sdk" }
actix-web = "4"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"] }
base64 = "0.21.4"
toml = "0.8.0"
dotenv = "0.15.0"
math = { path = "../../math" }
types = { path = "../../types" }
git2 = "0.18.1"
walkdir = "2.4.0"
indexmap = "2.0.2"
sqlx = { version = "0.7.1", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
